@@ -199,6 +199,9 @@ IN DEVELOPMENT
     * ``VersionedFile`` now has a new method ``get_parent_map`` which, like
       ``Graph.get_parent_map`` returns a dict of key:parents. (Robert Collins)
 
+    * ``set_make_working_trees`` is now implemented provided on all repository
+      implementations (Aaron Bentley)
+
 
 bzr 1.3 2008-03-20
 ------------------
